# staticSiteGenerator

./: .gitignore  README.md  devenv.nix  pyproject.toml
src/: htmlnode.py  leafnode.py  main.py  markdown_tools.py  parentnode.py  split_nodes_delimiter.py  test_htmlnode.py  test_leafnode.py  test_markdown_tools.py  test_parentnode.py  test_split_nodes_delimiter.py  test_text_to_html.py  test_textnode.py  text_to_html.py  textnode.py
src/markdown_tools/: extract_blocks.py  extract_inline.py  parser.py  split_nodes.py  test_extract_blocks.py  test_extract_inline.py  test_parser.py  test_split_nodes.py
src/nodes/: htmlnode.py  leafnode.py  parentnode.py  test_htmlnode.py  test_leafnode.py  test_parentnode.py  test_textnode.py  textnode.py
